# ocaml-universal-installer

.github/scripts/: test-frama-c-plugin.sh
.github/workflows/: build-nix.yml  linux.yml  macos.yml  windows.yml
doc/: README.md
scripts/: create_pkg_macos.sh
src/opam-oui/: main.ml
src/oui/: build.ml  lint.ml  main.ml
src/oui_cli/: args.ml  args.mli  warnings.ml  warnings.mli
src/oui_lib/: codesign.ml  codesign.mli  dune  info_plist.ml  info_plist.mli  install_name_tool.ml  install_name_tool.mli  installer_config.ml  installer_config.mli  macos_app_bundle.ml  macos_app_bundle.mli  macos_postinstall.ml  macos_postinstall.mli  makeself_backend.ml  opam_frontend.ml  otool.ml  otool.mli  pkgbuild_backend.ml  pkgbuild_backend.mli  plugin_utils.ml  plugin_utils.mli  sh_script.ml  string_with_vars.ml  string_with_vars.mli  system.ml  system.mli  wix_backend.ml  wix_backend.mli
tests/oui/lint/: run.t
tests/oui_lib/: dune  test_makeself_backend.ml  test_otool.ml  test_plist.ml  test_string_with_vars.ml
