;------------------------------------------------------------------------;
;                                                                        ;
;    Copyright 2023 OCamlPro                                             ;
;                                                                        ;
;  All rights reserved. This file is distributed under the terms of the  ;
;  GNU Lesser General Public License version 2.1, with the special       ;
;  exception on linking described in the file LICENSE.                   ;
;                                                                        ;
;------------------------------------------------------------------------;

(library
 (name oui)
 (public_name oui.lib)
 (libraries fmt opam-core opam-format opam-client opam-state unix yojson re)
 (preprocess
  (pps ppx_deriving.std ppx_deriving_yojson))
 (foreign_stubs
  (language c)
  (names win_ldd_c)))

(rule
 (target dataDir.ml)
 (deps
  (source_tree ../../data))
 (action
  (with-stdout-to
   %{target}
   (run ocaml-crunch ../../data -m plain -o dataDir.ml))))
