;------------------------------------------------------------------------;
;                                                                        ;
;    Copyright 2025 OCamlPro                                             ;
;                                                                        ;
;  All rights reserved. This file is distributed under the terms of the  ;
;  GNU Lesser General Public License version 2.1, with the special       ;
;  exception on linking described in the file LICENSE.                   ;
;                                                                        ;
;------------------------------------------------------------------------;

(library
 (name linux_tests)
 (inline_tests)
 (modules test_ldd test_makeself_backend)
 (enabled_if (= %{system} "linux"))
 (preprocess
  (pps ppx_expect))
 (libraries oui.lib opam-format))

(library
 (name macos_tests)
 (inline_tests)
 (modules test_otool test_plist)
 (enabled_if (= %{system} "macosx"))
 (preprocess
  (pps ppx_expect))
 (libraries oui.lib opam-format))
